--- a/src/routes/about/about.css
+++ b/src/routes/about/about.css
@@ -1,6 +1,7 @@
 .container {
     width: 100vw;
     height: 100vh;
+    padding-top: 30px;
     justify-content: center;
     align-items: center;
     text-align: center;
@@ -9,14 +10,17 @@
 
 h2 {
     color: #fff;
+    font-size: 1.3rem;
 }
 
 .container p {
     color: #fff;
+    font-size: 0.8rem;
 }
 
 .container img {
-    width: 20rem;
+    width: 10rem;
     height: auto;
+    border: rgb(255, 238, 0) 0.4rem solid;
     border-radius: 50%;
 }
