--- a/src/routes/about/about.css
+++ b/src/routes/about/about.css
@@ -1,3 +1,13 @@
+@keyframes typing {
+    from { width: 0 }
+    to { width: 100% }
+}
+
+@keyframes blink-caret {
+    from, to { border-color: transparent }
+    50% { border-color: orange; }
+}
+
 .container {
     width: 100vw;
     height: 100vh;
@@ -17,13 +27,22 @@ h2 {
 }
 
 .container p {
+    overflow: hidden;
+    border-right: .15em solid orange;
+    white-space: nowrap;
+    margin: 0 auto;
     width: 85vw;
     color: #fff;
-    font-size: 0.8rem;
+    font-size: 0.9rem;
     letter-spacing: 0.1rem;
     margin: auto;
     text-align: justify;
+    line-height: 1.6rem;
+    animation: 
+    typing 3.5s steps(40, end),
+    blink-caret .75s step-end infinite;
 }
+
 
 .container img {
     width: 10rem;
