--- a/src/routes/navigation/navigation.css
+++ b/src/routes/navigation/navigation.css
@@ -30,11 +30,11 @@
 
 .navItems a:hover {
     text-decoration: none;
-    padding: 0 1rem;
+    padding: 0 0.2rem;
     color: rgb(255, 238, 0);
-    font-weight: bolder;
-    font-size: 15px;
-    letter-spacing: 0.3rem;
+    font-weight: 600;
+    font-size: 12px;
+    letter-spacing: 0.05rem;
 }
 
 @media only screen and (min-device-width: 768px) {
