--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,13 @@
   margin: 0;
   padding: 0;
   font-family: 'Barlow', sans-serif;
-} 
+}
+
+body {
+  background-color: #000;
+  width: 100vw;
+  height: 100vh;
+}
 
 .presentation {
   display: flex;
