--- a/src/routes/about/about.css
+++ b/src/routes/about/about.css
@@ -1,4 +1,10 @@
 
+body {
+  background-color: #000;
+  width: 100vw;
+  height: 100vh;
+}
+
 @keyframes type {
   0% {
     width: 0;
@@ -93,9 +99,10 @@
 .container {
     display: grid;
     height: 100vh;
-    width: 100vw;
+    width: 100%;
     background-color: rgb(0, 0, 0);
     padding: 0 2rem;
+    
 }
 
 
@@ -184,4 +191,200 @@ h2 {
     height: auto;
     border-radius: 50%;
     margin: 0 auto;
+}
+
+
+
+/*-------------- DESKTOP ----------------*/
+
+@media only screen and (min-device-width: 768px) {
+
+  @keyframes type {
+    0% {
+      width: 0;
+    }
+    99.9% {
+      border-right: .15em solid orange;
+    }
+    100% {
+      border: none;
+    }
+  }
+  
+  @-webkit-keyframes type {
+    0% {
+      width: 0;
+    }
+    99.9% {
+      border-right: .15em solid orange;
+    }
+    100% {
+      border: none;
+    }
+  }
+  
+  @keyframes type2 {
+    0% {
+      width: 0;
+    }
+    1% {
+      opacity: 1;
+    }
+    99.9% {
+      border-right: .15em solid orange;
+    }
+    100% {
+      opacity: 1;
+      border: none;
+    }
+  }
+  
+  @-webkit-keyframes type2 {
+    0% {
+      width: 0;
+    }
+    1% {
+      opacity: 1;
+    }
+    99.9% {
+      border-right: .15em solid orange;
+    }
+    100% {
+      opacity: 1;
+      border: none;
+    }
+  }
+  
+  @keyframes type3 {
+    0% {
+      width: 0;
+    }
+    1% {
+      opacity: 1;
+    }
+    100% {
+      opacity: 1;
+    }
+  }
+  
+  @-webkit-keyframes type3 {
+    0% {
+      width: 0;
+    }
+    1% {
+      opacity: 1;
+    }
+    100% {
+      opacity: 1;
+    }
+  }
+  
+  @keyframes blink {
+    50% {
+      border-color: transparent;
+    }
+  }
+  @-webkit-keyframes blink {
+    50% {
+      border-color: tranparent;
+    }
+  }
+  
+  .container {
+      display: grid;
+      width: 100vw;
+      height: 100vh;
+      background-color: rgb(0, 0, 0);
+      margin: auto;
+  }
+  
+  
+  .css-typing p {
+    color:#fff;
+    border-right: .15em solid orange;
+    font-family: "Courier";
+    font-size: 20px;
+    white-space: nowrap;
+    overflow: hidden;
+  }
+  
+  .css-typing p:nth-child(1) {
+    width: 17em;
+    -webkit-animation: type 2s steps(40, end);
+    animation: type 2s steps(40, end);
+    -webkit-animation-fill-mode: forwards;
+    animation-fill-mode: forwards;
+  }
+  
+  .css-typing p:nth-child(2) {
+    width: 20em;
+    opacity: 0;
+    -webkit-animation: type2 2s steps(40, end);
+    animation: type2 2s steps(40, end);
+    -webkit-animation-delay: 2s;
+    animation-delay: 2s;
+    -webkit-animation-fill-mode: forwards;
+    animation-fill-mode: forwards;
+  }
+  
+  .css-typing p:nth-child(3) {
+    width: 17em;
+    opacity: 0;
+    -webkit-animation: type2 5s steps(40, end);
+    animation: type2 2s steps(40, end);
+    -webkit-animation-delay: 2s;
+    animation-delay: 4s;
+    -webkit-animation-fill-mode: forwards;
+    animation-fill-mode: forwards;
+  }
+  
+  .css-typing p:nth-child(4) {
+    width: 11em;
+    opacity: 0;
+    -webkit-animation: type2 5s steps(20, end);
+    animation: type2 2s steps(40, end);
+    -webkit-animation-delay: 4s;
+    animation-delay: 6s;
+    -webkit-animation-fill-mode: forwards;
+    animation-fill-mode: forwards;
+  }
+  
+  .css-typing p:nth-child(5) {
+    width: 30em;
+    opacity: 0;
+    -webkit-animation: type2 5s steps(20, end);
+    animation: type2 2s steps(40, end);
+    -webkit-animation-delay: 4s;
+    animation-delay: 8s;
+    -webkit-animation-fill-mode: forwards;
+    animation-fill-mode: forwards;
+  }
+  
+  .css-typing p:nth-child(6) {
+    width: 28.5em;
+    opacity: 0;
+    -webkit-animation: type3 5s steps(20, end), blink .5s step-end infinite alternate;
+    animation: type3 2s steps(20, end), blink .5s step-end infinite alternate;
+    -webkit-animation-delay: 4s;
+    animation-delay: 10s;
+    -webkit-animation-fill-mode: forwards;
+    animation-fill-mode: forwards;
+  }
+  
+  h2 {
+      color: rgb(255, 238, 0);
+      font-size: 2rem;
+      text-transform: uppercase;
+      font-weight: 600;
+      letter-spacing: 0.3rem;
+      margin: 1rem auto;
+  }
+  
+  .container img {
+      width: 20rem;
+      height: auto;
+      border-radius: 50%;
+      margin: 4rem auto;
+  }
+
 }
