--- a/src/routes/contact/contact.css
+++ b/src/routes/contact/contact.css
@@ -5,6 +5,9 @@ body {
   }
 
 .containerContact {
+  display:flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
   margin: 2rem;
   height: 100vh;
   border: 0.2rem solid rgb(255, 255, 255);
@@ -12,8 +15,6 @@ body {
   padding: 0.5rem 1rem;
   box-shadow: 1px 1px 10px rgb(255, 255, 255);
   padding: 2rem;
-  justify-content: center;
-  text-align: center;
 }
  span{
   display: block;
@@ -22,7 +23,7 @@ body {
 
 h1 {
   width: 10vh;
-  font-size: 2.8rem;
+  font-size: 2rem;
   margin: 1rem 0 3rem 0;
   color: rgb(255, 238, 0);
   font-weight: 800;
@@ -39,19 +40,33 @@ h1 {
 } */
 
 .socialMedia {
-  height: 60vh;
+  text-align: center;
 }
 
 .col a{
   height: auto;
   background-color: #000;
   border: none;
-}
-
-.icon {
-  font-size: 3.5rem;
+  justify-content: center;
   text-align: center;
 }
 
+.col a:hover{
+  height: auto;
+  background-color: none;
+  border: none;
+  justify-content: center;
+  text-align: center;
+}
+
+.icon {
+  font-size: 5rem;
+  text-align: center;
+}
+
+.btn:hover {
+  color:rgb(255, 0, 136);
+  background-color: rgb(0, 0, 0);
+}
 
 
