--- a/src/routes/home/home.css
+++ b/src/routes/home/home.css
@@ -5,29 +5,17 @@
     font-family: 'Barlow', sans-serif;
   } 
   
+
   .presentation {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: #000;
-    height: 100vh; 
-    height: calc(var(--vh, 1vh) * 100);
-    margin: 0 auto;
-    width: 100%;
+    margin: 50% 0;
   }
   
-  .presentationTitle {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    width: 100vw;
-    height: 100vh;
-    background-color: rgb(0, 0, 0);
-    padding: 1rem;
-  }
-  
-  .presentationTitle h1{
+.presentationContainer {
+  display: block;
+  text-align: center;
+}
+
+  .presentation h1{
     margin: 0 5px 0 0;
     text-transform: uppercase;
     font-size: 2rem;
@@ -38,8 +26,8 @@
   
   .completeName {
     display:flex;
+    justify-content: center;
     align-items: center;
-    justify-content: space-around;
   }
   /* 
   .completeName {
@@ -68,22 +56,26 @@
     }
   }
   
-  .fadeOut {
+/*   .fadeOut {
     cursor: pointer;
     animation: fadeInOutAnimation 4s;
     animation-fill-mode: forwards;
+  }  */
+  
+.fadeIn {
+    cursor: pointer;
+    /*animation: fadeInOutAnimation 4s;
+    animation-fill-mode: forwards;
+    animation-direction: alternate-reverse;*/
+    text-transform: uppercase;
+    font-size: 2rem;
+    font-weight: bolder;
+    color: rgb(255, 238, 0);
   } 
   
-  .fadeIn {
-    cursor: pointer;
-    animation: fadeInOutAnimation 4s;
-    animation-fill-mode: forwards;
-    animation-direction: alternate-reverse;
-  }
-  
-  .surname {
-    animation: translateAnimation 1s forwards;
-    animation-delay: 3s;
+.surname {
+    /*   animation: translateAnimation 1s forwards;
+    animation-delay: 3s;*/
     text-transform: uppercase;
     font-size: 2rem;
     font-weight: bolder;
@@ -93,12 +85,17 @@
     margin: 0 0 0 5px;
   }
   
-  .presentationTitle p {
+  .presentation p {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     font-size: 1.5rem;
     color: rgb(231, 231, 231);
   }
   
-  .presentationTitle button {
+  .presentation button {
+    display: block;
+    margin: auto;
     border: #000 0.1rem solid;
     background-color: rgb(255, 238, 0);
     color: #000;
@@ -108,7 +105,7 @@
     font-weight: bold;
   }
   
-  .presentationTitle button:hover {
+  .presentationbutton:hover {
     border: rgb(255, 238, 0) 0.1rem solid;
     background-color: rgb(0, 0, 0);
     color: rgb(255, 238, 0);
@@ -120,113 +117,6 @@
   
   @media only screen and (min-device-width: 768px) {
   
-  .presentation {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: #000;
-    width: 100vw;
-    height: 100vh;
-  }
   
-  .presentationTitle {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    width: 80vw;
-    height: 80vh;
-    background-color: rgb(0, 0, 0);
-    padding: 2rem;
-  }
-  
-  .presentationTitle h1{
-    margin: 0;
-    text-transform: uppercase;
-    font-size: 5rem;
-    font-weight: bolder;
-    color:rgb(231, 231, 231);
-    letter-spacing: 0.2rem;
-  }
-  
-  .completeName {
-    display:flex;
-    align-items: center;
-    justify-content: space-between;
-    width: 40%;
-  }
-  .completeName {
-    visibility: visible;
-    opacity: 1;
-    transition: opacity 2s linear;
-  }
-  
-  @keyframes fadeInOutAnimation {
-    0% {
-      opacity: 1;
-    }
-    100% {
-      opacity: 0;
-    }
-  }
-  
-  
-  @keyframes translateAnimation {
-    from {
-      transform: translateX(0%);
-    }
-  
-    to {
-      transform: translateX(-80%);
-    }
-  }
-  
-  .fadeOut {
-    cursor: pointer;
-    animation: fadeInOutAnimation 2s;
-    animation-fill-mode: forwards;
-  }
-  .fadeIn {
-    cursor: pointer;
-    animation: fadeInOutAnimation 3s;
-    animation-fill-mode: forwards;
-    animation-direction: alternate-reverse;
-  }
-  
-  .surname {
-    animation: translateAnimation 1s forwards;
-    animation-delay: 3s;
-    text-transform: uppercase;
-    font-size: 5rem;
-    font-weight: bolder;
-    color: rgb(255, 238, 0);
-    padding-left: 0.5rem;
-    letter-spacing: 0.2rem;
-  }
-  
-  .presentationTitle p {
-    font-size: 2.5rem;
-    color: rgb(231, 231, 231);
-  }
-  
-  .presentationTitle button {
-    border: #000 0.1rem solid;
-    background-color: rgb(255, 238, 0);
-    color: #000;
-    font-size: 1.2rem;
-    border-radius: 2rem;
-    padding: 0.3rem 2rem;
-    font-weight: bold;
-  }
-  
-  .presentationTitle button:hover {
-    border: rgb(255, 238, 0) 0.1rem solid;
-    background-color: rgb(0, 0, 0);
-    color: rgb(255, 238, 0);
-    font-size: 1.2rem;
-    border-radius: 2rem;
-    padding: 0.3rem 2rem;
-    font-weight: thin;
-  }
   
   }
