dont use this code

--- a/src/routes/home/home.css
+++ b/src/routes/home/home.css
@@ -5,25 +5,17 @@
     font-family: 'Barlow', sans-serif;
   } 
   
-  .presentation {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: #000;
-    height: 100vh; 
-    height: calc(var(--vh, 1vh) * 100);
-    margin: 0 auto;
-    width: 100%;
-  }
-  
   .presentationTitle {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    justify-content: space-around;
     width: 100vw;
     height: 100vh;
+    height: calc(var(--vh, 1vh) * 100);
     background-color: rgb(0, 0, 0);
+    margin: 0 auto;
     padding: 1rem;
   }
   
@@ -38,8 +30,6 @@
   
   .completeName {
     display:flex;
-    align-items: center;
-    justify-content: space-around;
   }
   /* 
   .completeName {
@@ -68,11 +58,11 @@
     }
   }
   
-  .fadeOut {
+/*   .fadeOut {
     cursor: pointer;
     animation: fadeInOutAnimation 4s;
     animation-fill-mode: forwards;
-  } 
+  }  */
   
   .fadeIn {
     cursor: pointer;
