--- a/src/routes/navigation/navigation.css
+++ b/src/routes/navigation/navigation.css
@@ -1,4 +1,40 @@
-.navigation {
+.container-fluid {
+    background-color: #000;
+    border:none;
+}
+
+.navbar-brand {
+    color:#fff;
+}
+
+.navbar-toggler {
+    background-color:rgb(236, 236, 236);
+    border-color: rgb(236, 236, 236);
+}
+
+#navbarSupportedContent {
+    text-align: right;
+}
+
+.navItems a{
+    text-decoration: none;
+    padding: 0 0.5rem;
+    color: #fff;
+    font-weight: 400;
+    font-size: 16px;
+    letter-spacing: 0.05rem;
+}
+
+.navItems a:hover {
+    text-decoration: none;
+    padding: 0 0.5rem;
+    color: rgb(255, 238, 0);
+    font-weight: 600;
+    font-size: 18px;
+    letter-spacing: 0.05rem;
+}
+
+/* .navigation {
     height: 12vh;
     width: 100%;
     display: flex;
@@ -76,4 +112,4 @@
     font-size: 15px;
     letter-spacing: 0.3rem;
 }
-}
+} */
