--- a/src/App.css
+++ b/src/App.css
@@ -7,8 +7,9 @@
 
 body {
   background-color: #000;
-  width: 100vw;
-  height: 100vh;
+  min-height: 100vh;
+  max-width: 400px;
+  margin: 0 auto;
 }
 
 .presentation {
