--- a/src/routes/contact/contact.css
+++ b/src/routes/contact/contact.css
@@ -1,8 +1,3 @@
-body {
-    background-color: #000;
-    width: 100vw;
-    height: 100vh;
-  }
 
 .containerContact {
   display:flex;
@@ -66,8 +61,50 @@ h2 {
 }
 
 .btn:hover {
-  color:rgb(255, 0, 136);
+  color:rgb(255, 0, 64);
   background-color: rgb(0, 0, 0);
 }
 
+@media only screen and (min-device-width: 768px) {
+  .containerContact {
+    display:block;
+    margin: 2rem;
+    min-height: 100vh;
+    border: 0.2rem solid rgb(255, 255, 255);
+    border-radius: 1.5rem;
+    padding: 0.5rem 1rem;
+    box-shadow: 1px 1px 10px rgb(255, 255, 255);
+    padding: 6rem;
+  }
+
+  .title{
+    display: flex;
+  }
+
+  .title span{
+    padding: 1rem;
+  }
+
+  h2 {
+    font-size: 3.5rem;
+    margin: 1rem 0 3rem 0;
+    font-weight: 800;
+    letter-spacing: 0.5rem;;
+    text-transform: uppercase;
+  }
+
+  .socialMedia {
+    display: flex;
+    flex-wrap: nowrap;
+    width: 100%;
+    margin-top: 8rem;
+  }
+  .row-cols-1 {
+    width: 33%;
+}
+.icon {
+  font-size: 7rem;
+  text-align: center;
+}
+}
 
