--- a/src/routes/home/home.css
+++ b/src/routes/home/home.css
@@ -102,14 +102,27 @@
   }
   
   .presentation button:hover {
-    border: rgb(255, 238, 0) 0.1rem solid;
+    border: rgb(255, 238, 0) 0.2rem solid;
     background-color: rgb(0, 0, 0);
     color: rgb(255, 238, 0);
-    font-size: 0.86rem;
+    font-size: 0.9rem;
     border-radius: 2rem;
     padding: 0.2rem 1rem;
     font-weight: thin;
   }
+
+  
+  .presentation button a {
+    color: #000;
+    text-decoration: none;
+  }
+  
+
+  .presentation button a:hover {
+    color: rgb(255, 238, 0);
+    text-decoration: none;
+  }
+
   
   @media only screen and (min-device-width: 768px) {
   
@@ -217,13 +230,24 @@
     }
     
     .presentation button:hover {
-      border: rgb(255, 238, 0) 0.1rem solid;
+      border: rgb(255, 238, 0) 0.2rem solid;
       background-color: rgb(0, 0, 0);
       color: rgb(255, 238, 0);
-      font-size: 0.86rem;
+      font-size: 1.5rem;
       border-radius: 2rem;
-      padding: 0.2rem 1rem;
+      padding: 0.3rem 2rem;
       font-weight: thin;
+    }
+
+    .presentation button a {
+      color: #000;
+      text-decoration: none;
+    }
+    
+
+    .presentation button a:hover {
+      color: rgb(255, 238, 0);
+      text-decoration: none;
     }
   
   }
