--- a/src/routes/about/about.css
+++ b/src/routes/about/about.css
@@ -1,8 +1,15 @@
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  font-family: 'Barlow', sans-serif;
+}
 
 body {
   background-color: #000;
-  width: 100vw;
-  height: 100vh;
+  min-height: 100vh;
+  max-width: 400px;
+  margin: 0 auto;
 }
 
 @keyframes type {
@@ -98,10 +105,8 @@ body {
 
 .container {
     display: grid;
-    height: 100vh;
-    width: 100%;
     background-color: rgb(0, 0, 0);
-    padding: 0 2rem;
+    padding: 0 1rem;
     
 }
 
@@ -109,14 +114,14 @@ body {
 .css-typing p {
   color:#fff;
   border-right: .15em solid orange;
-  font-family: "Courier";
-  font-size: 12px;
+  font-size: 16px;
   white-space: nowrap;
   overflow: hidden;
+  margin-top: 1rem;
 }
 
 .css-typing p:nth-child(1) {
-  width: 17em;
+  width: 22em;
   -webkit-animation: type 2s steps(40, end);
   animation: type 2s steps(40, end);
   -webkit-animation-fill-mode: forwards;
@@ -124,7 +129,7 @@ body {
 }
 
 .css-typing p:nth-child(2) {
-  width: 20em;
+  width: 18em;
   opacity: 0;
   -webkit-animation: type2 2s steps(40, end);
   animation: type2 2s steps(40, end);
@@ -146,7 +151,7 @@ body {
 }
 
 .css-typing p:nth-child(4) {
-  width: 11em;
+  width: 20em;
   opacity: 0;
   -webkit-animation: type2 5s steps(20, end);
   animation: type2 2s steps(40, end);
@@ -157,40 +162,29 @@ body {
 }
 
 .css-typing p:nth-child(5) {
-  width: 30em;
+  width: 13em;
   opacity: 0;
-  -webkit-animation: type2 5s steps(20, end);
-  animation: type2 2s steps(40, end);
+  -webkit-animation: type2 5s steps(20, end), blink .5s step-end infinite alternate;
+  animation: type2 2s steps(40, end), blink .5s step-end infinite alternate;
   -webkit-animation-delay: 4s;
   animation-delay: 8s;
   -webkit-animation-fill-mode: forwards;
   animation-fill-mode: forwards;
 }
 
-.css-typing p:nth-child(6) {
-  width: 28.5em;
-  opacity: 0;
-  -webkit-animation: type3 5s steps(20, end), blink .5s step-end infinite alternate;
-  animation: type3 2s steps(20, end), blink .5s step-end infinite alternate;
-  -webkit-animation-delay: 4s;
-  animation-delay: 10s;
-  -webkit-animation-fill-mode: forwards;
-  animation-fill-mode: forwards;
-}
-
-h2 {
+.aboutTitle {
     color: rgb(255, 238, 0);
-    font-size: 1.1rem;
+    font-size: 2rem;
     font-weight: 600;
     letter-spacing: 0.1rem;
-    margin: auto;
+    text-transform: uppercase;
 }
 
 .container img {
-    width: 13rem;
+    width: 10rem;
     height: auto;
     border-radius: 50%;
-    margin: 0 auto;
+    margin: 1rem auto;
 }
 
 
@@ -289,13 +283,11 @@ h2 {
       border-color: tranparent;
     }
   }
-  
-  .container {
-      display: grid;
-      width: 100vw;
-      height: 100vh;
-      background-color: rgb(0, 0, 0);
-      margin: auto;
+
+  body {
+    background-color: #000;
+    min-height: 100%;
+    max-width: 100%;
   }
   
   
@@ -309,7 +301,7 @@ h2 {
   }
   
   .css-typing p:nth-child(1) {
-    width: 17em;
+    width: 22em;
     -webkit-animation: type 2s steps(40, end);
     animation: type 2s steps(40, end);
     -webkit-animation-fill-mode: forwards;
@@ -317,7 +309,7 @@ h2 {
   }
   
   .css-typing p:nth-child(2) {
-    width: 20em;
+    width: 18em;
     opacity: 0;
     -webkit-animation: type2 2s steps(40, end);
     animation: type2 2s steps(40, end);
@@ -339,7 +331,7 @@ h2 {
   }
   
   .css-typing p:nth-child(4) {
-    width: 11em;
+    width: 20em;
     opacity: 0;
     -webkit-animation: type2 5s steps(20, end);
     animation: type2 2s steps(40, end);
@@ -350,28 +342,17 @@ h2 {
   }
   
   .css-typing p:nth-child(5) {
-    width: 30em;
+    width: 13em;
     opacity: 0;
-    -webkit-animation: type2 5s steps(20, end);
-    animation: type2 2s steps(40, end);
+    -webkit-animation: type2 5s steps(20, end), blink .5s step-end infinite alternate;
+    animation: type2 2s steps(40, end), blink .5s step-end infinite alternate;
     -webkit-animation-delay: 4s;
     animation-delay: 8s;
     -webkit-animation-fill-mode: forwards;
     animation-fill-mode: forwards;
   }
   
-  .css-typing p:nth-child(6) {
-    width: 28.5em;
-    opacity: 0;
-    -webkit-animation: type3 5s steps(20, end), blink .5s step-end infinite alternate;
-    animation: type3 2s steps(20, end), blink .5s step-end infinite alternate;
-    -webkit-animation-delay: 4s;
-    animation-delay: 10s;
-    -webkit-animation-fill-mode: forwards;
-    animation-fill-mode: forwards;
-  }
-  
-  h2 {
+  .aboutTitle {
       color: rgb(255, 238, 0);
       font-size: 2rem;
       text-transform: uppercase;
