--- a/src/routes/contact/contact.css
+++ b/src/routes/contact/contact.css
@@ -1,3 +1,16 @@
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  font-family: 'Barlow', sans-serif;
+}
+
+body {
+  background-color: #000;
+  min-height: 100vh;
+  max-width: 400px;
+  margin: 0 auto;
+}
 
 .containerContact {
   display:flex;
@@ -16,15 +29,14 @@
 
 }
 
-h2 {
+.contactTitle {
   width: 10vh;
   font-size: 2rem;
   margin: 1rem 0 3rem 0;
   color: rgb(255, 238, 0);
   font-weight: 800;
-  letter-spacing: 0.3rem;;
+  letter-spacing: 0.3rem;
   text-transform: uppercase;
-  text-shadow: 1px 1px 3px rgb(255, 238, 0);
 }
 
 /* h1 span {
@@ -85,7 +97,7 @@ h2 {
     padding: 1rem;
   }
 
-  h2 {
+  .contactTitle {
     font-size: 3.5rem;
     margin: 1rem 0 3rem 0;
     font-weight: 800;
