--- a/src/routes/about/about.css
+++ b/src/routes/about/about.css
@@ -1,10 +1,5 @@
-
-
-body {
-  background-color: #000;
-  min-height: 100vh;
-  max-width: 400px;
-  margin: 0 auto;
+:root {
+  --main-bg-color: #FEF9C7;
 }
 
 @keyframes type {
@@ -100,7 +95,6 @@ body {
 
 .container {
     display: grid;
-    background-color: rgb(0, 0, 0);
     padding: 0 1rem;
     
 }
@@ -168,9 +162,8 @@ body {
 }
 
 .aboutTitle {
-    color: rgb(255, 238, 0);
-    font-size: 2rem;
-    font-weight: 600;
+    color: var(--main-bg-color);
+    font-size: 1.5rem;
     letter-spacing: 0.1rem;
     text-transform: uppercase;
 }
@@ -179,7 +172,7 @@ body {
     width: 10rem;
     height: auto;
     border-radius: 50%;
-    margin: 1rem auto;
+    margin: 3rem auto;
 }
 
 
@@ -277,14 +270,7 @@ body {
     50% {
       border-color: tranparent;
     }
-  }
-
-  body {
-    background-color: #000;
-    min-height: 100%;
-    max-width: 100%;
-  }
-  
+  }  
   
   .css-typing p {
     color:#fff;
@@ -348,16 +334,14 @@ body {
   }
   
   .aboutTitle {
-      color: rgb(255, 238, 0);
       font-size: 2rem;
       text-transform: uppercase;
-      font-weight: 600;
       letter-spacing: 0.3rem;
-      margin: 1rem auto;
+      margin-bottom: 2rem;
   }
   
   .container img {
-      width: 20rem;
+      width: 16rem;
       height: auto;
       border-radius: 50%;
       margin: 4rem auto;
