--- a/src/routes/contact/contact.css
+++ b/src/routes/contact/contact.css
@@ -3,24 +3,18 @@
   flex-wrap: wrap;
   justify-content: space-between;
   margin: 2rem;
-  height: 100vh;
-  border: 0.2rem solid rgb(255, 255, 255);
+  border: 2px solid rgb(255, 255, 255);
   border-radius: 1.5rem;
-  padding: 0.5rem 1rem;
-  box-shadow: 1px 1px 10px rgb(255, 255, 255);
   padding: 2rem;
+  height: 80vh;
 }
- span{
-  display: block;
 
-}
 
 .contactTitle {
-  width: 10vh;
+  display: flex;
+  justify-content: center;
   font-size: 2rem;
-  margin: 1rem 0 3rem 0;
   color: rgb(255, 238, 0);
-  font-weight: 800;
   letter-spacing: 0.3rem;
   text-transform: uppercase;
 }
@@ -53,13 +47,13 @@
 }
 
 .icon {
-  font-size: 5rem;
+  font-size: 3rem;
   text-align: center;
   margin: 1rem 0;
 }
 
 .btn:hover {
-  color:rgb(255, 0, 64);
+  color:rgb(114, 114, 114);
   background-color: rgb(0, 0, 0);
 }
 
@@ -67,26 +61,14 @@
   .containerContact {
     display:block;
     margin: 2rem;
-    min-height: 100vh;
-    border: 0.2rem solid rgb(255, 255, 255);
     border-radius: 1.5rem;
-    padding: 0.5rem 1rem;
-    box-shadow: 1px 1px 10px rgb(255, 255, 255);
     padding: 6rem;
   }
 
-  .title{
-    display: flex;
-  }
-
-  .title span{
-    padding: 1rem;
-  }
+  
 
   .contactTitle {
-    font-size: 3.5rem;
-    margin: 1rem 0 3rem 0;
-    font-weight: 800;
+    font-size: 2.5rem;
     letter-spacing: 0.5rem;;
     text-transform: uppercase;
   }
@@ -101,7 +83,7 @@
     width: 33%;
 }
 .icon {
-  font-size: 7rem;
+  font-size: 5rem;
   text-align: center;
 }
 }
