--- a/src/routes/about/about.css
+++ b/src/routes/about/about.css
@@ -2,168 +2,10 @@
   --main-bg-color: #FEF9C7;
 }
 
-@keyframes type {
-  0% {
-    width: 0;
-  }
-  99.9% {
-    border-right: .15em solid orange;
-  }
-  100% {
-    border: none;
-  }
-}
-
-@-webkit-keyframes type {
-  0% {
-    width: 0;
-  }
-  99.9% {
-    border-right: .15em solid orange;
-  }
-  100% {
-    border: none;
-  }
-}
-
-@keyframes type2 {
-  0% {
-    width: 0;
-  }
-  1% {
-    opacity: 1;
-  }
-  99.9% {
-    border-right: .15em solid orange;
-  }
-  100% {
-    opacity: 1;
-    border: none;
-  }
-}
-
-@-webkit-keyframes type2 {
-  0% {
-    width: 0;
-  }
-  1% {
-    opacity: 1;
-  }
-  99.9% {
-    border-right: .15em solid orange;
-  }
-  100% {
-    opacity: 1;
-    border: none;
-  }
-}
-
-@keyframes type3 {
-  0% {
-    width: 0;
-  }
-  1% {
-    opacity: 1;
-  }
-  100% {
-    opacity: 1;
-  }
-}
-
-@-webkit-keyframes type3 {
-  0% {
-    width: 0;
-  }
-  1% {
-    opacity: 1;
-  }
-  100% {
-    opacity: 1;
-  }
-}
-
-@keyframes blink {
-  50% {
-    border-color: transparent;
-  }
-}
-@-webkit-keyframes blink {
-  50% {
-    border-color: tranparent;
-  }
-}
-
-.container {
-    display: grid;
-    padding: 0 1rem;
-    
-}
-
-
-.css-typing p {
-  color:#fff;
-  border-right: .15em solid orange;
-  font-size: 16px;
-  white-space: nowrap;
-  overflow: hidden;
-  margin-top: 1rem;
-}
-
-.css-typing p:nth-child(1) {
-  width: 23em;
-  -webkit-animation: type 2s steps(40, end);
-  animation: type 2s steps(40, end);
-  -webkit-animation-fill-mode: forwards;
-  animation-fill-mode: forwards;
-}
-
-.css-typing p:nth-child(2) {
-  width: 19em;
-  opacity: 0;
-  -webkit-animation: type2 2s steps(40, end);
-  animation: type2 2s steps(40, end);
-  -webkit-animation-delay: 2s;
-  animation-delay: 2s;
-  -webkit-animation-fill-mode: forwards;
-  animation-fill-mode: forwards;
-}
-
-.css-typing p:nth-child(3) {
-  width: 17em;
-  opacity: 0;
-  -webkit-animation: type2 5s steps(40, end);
-  animation: type2 2s steps(40, end);
-  -webkit-animation-delay: 2s;
-  animation-delay: 4s;
-  -webkit-animation-fill-mode: forwards;
-  animation-fill-mode: forwards;
-}
-
-.css-typing p:nth-child(4) {
-  width: 20em;
-  opacity: 0;
-  -webkit-animation: type2 5s steps(20, end);
-  animation: type2 2s steps(40, end);
-  -webkit-animation-delay: 4s;
-  animation-delay: 6s;
-  -webkit-animation-fill-mode: forwards;
-  animation-fill-mode: forwards;
-}
-
-.css-typing p:nth-child(5) {
-  width: 12em;
-  opacity: 0;
-  -webkit-animation: type2 5s steps(20, end), blink .5s step-end infinite alternate;
-  animation: type2 2s steps(40, end), blink .5s step-end infinite alternate;
-  -webkit-animation-delay: 4s;
-  animation-delay: 8s;
-  -webkit-animation-fill-mode: forwards;
-  animation-fill-mode: forwards;
-}
-
 .aboutTitle {
-    color: var(--main-bg-color);
-    font-size: 1.5rem;
+    color: #ff6565;
+    font-weight: bolder;
+    font-size: 2rem;
     letter-spacing: 0.1rem;
     text-transform: uppercase;
 }
@@ -175,166 +17,22 @@
     margin: 3rem auto;
 }
 
+p {
+  padding: 1rem 2rem;
+  font-size: 18px;
+  color: #F6ECEC;
+  text-align: justify;
+  letter-spacing: 1px;
+}
+
 
 
 /*-------------- DESKTOP ----------------*/
 
 @media only screen and (min-device-width: 768px) {
-
-  @keyframes type {
-    0% {
-      width: 0;
-    }
-    99.9% {
-      border-right: .15em solid orange;
-    }
-    100% {
-      border: none;
-    }
-  }
-  
-  @-webkit-keyframes type {
-    0% {
-      width: 0;
-    }
-    99.9% {
-      border-right: .15em solid orange;
-    }
-    100% {
-      border: none;
-    }
-  }
-  
-  @keyframes type2 {
-    0% {
-      width: 0;
-    }
-    1% {
-      opacity: 1;
-    }
-    99.9% {
-      border-right: .15em solid orange;
-    }
-    100% {
-      opacity: 1;
-      border: none;
-    }
-  }
-  
-  @-webkit-keyframes type2 {
-    0% {
-      width: 0;
-    }
-    1% {
-      opacity: 1;
-    }
-    99.9% {
-      border-right: .15em solid orange;
-    }
-    100% {
-      opacity: 1;
-      border: none;
-    }
-  }
-  
-  @keyframes type3 {
-    0% {
-      width: 0;
-    }
-    1% {
-      opacity: 1;
-    }
-    100% {
-      opacity: 1;
-    }
-  }
-  
-  @-webkit-keyframes type3 {
-    0% {
-      width: 0;
-    }
-    1% {
-      opacity: 1;
-    }
-    100% {
-      opacity: 1;
-    }
-  }
-  
-  @keyframes blink {
-    50% {
-      border-color: transparent;
-    }
-  }
-  @-webkit-keyframes blink {
-    50% {
-      border-color: tranparent;
-    }
-  }  
-  
-  .css-typing p {
-    color:#fff;
-    border-right: .15em solid orange;
-    font-family: "Courier";
-    font-size: 20px;
-    white-space: nowrap;
-    overflow: hidden;
-  }
-  
-  .css-typing p:nth-child(1) {
-    width: 22em;
-    -webkit-animation: type 2s steps(40, end);
-    animation: type 2s steps(40, end);
-    -webkit-animation-fill-mode: forwards;
-    animation-fill-mode: forwards;
-  }
-  
-  .css-typing p:nth-child(2) {
-    width: 18em;
-    opacity: 0;
-    -webkit-animation: type2 2s steps(40, end);
-    animation: type2 2s steps(40, end);
-    -webkit-animation-delay: 2s;
-    animation-delay: 2s;
-    -webkit-animation-fill-mode: forwards;
-    animation-fill-mode: forwards;
-  }
-  
-  .css-typing p:nth-child(3) {
-    width: 17em;
-    opacity: 0;
-    -webkit-animation: type2 5s steps(40, end);
-    animation: type2 2s steps(40, end);
-    -webkit-animation-delay: 2s;
-    animation-delay: 4s;
-    -webkit-animation-fill-mode: forwards;
-    animation-fill-mode: forwards;
-  }
-  
-  .css-typing p:nth-child(4) {
-    width: 20em;
-    opacity: 0;
-    -webkit-animation: type2 5s steps(20, end);
-    animation: type2 2s steps(40, end);
-    -webkit-animation-delay: 4s;
-    animation-delay: 6s;
-    -webkit-animation-fill-mode: forwards;
-    animation-fill-mode: forwards;
-  }
-  
-  .css-typing p:nth-child(5) {
-    width: 13em;
-    opacity: 0;
-    -webkit-animation: type2 5s steps(20, end), blink .5s step-end infinite alternate;
-    animation: type2 2s steps(40, end), blink .5s step-end infinite alternate;
-    -webkit-animation-delay: 4s;
-    animation-delay: 8s;
-    -webkit-animation-fill-mode: forwards;
-    animation-fill-mode: forwards;
-  }
   
   .aboutTitle {
-      font-size: 2rem;
+      font-size: 3rem;
       text-transform: uppercase;
       letter-spacing: 0.2rem;
       margin-bottom: 2rem;
@@ -346,5 +44,11 @@
       border-radius: 50%;
       margin: 4rem auto;
   }
+
+    p {
+      width: 70%;
+      margin: auto;
+      font-size: 20px;
+    }
 
 }
