--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,8 @@
   margin: 0;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  height: calc(100% - 3.5rem);
+  width: 100%;
 }
 
 code {
