--- a/src/routes/home/home.css
+++ b/src/routes/home/home.css
@@ -67,7 +67,7 @@
     text-transform: uppercase;
     font-size: 2rem;
     font-weight: bolder;
-    color: #ffb6b6;
+    color: #ff5e5e;
   } 
   
 .surname {
@@ -109,14 +109,14 @@
 
   
   .presentation button a {
-    color: #464245;
+    color: #1f1d1e;
     text-decoration: none;
     font-weight: 700;
   }
   
 
   .presentation button a:hover {
-    color: #464245;
+    color: #1f1d1e;
     text-decoration: none;
   }
 
@@ -182,19 +182,11 @@
 }
   
 .fadeIn {
-      cursor: pointer;
-      animation: fadeInOutAnimation 4s;
-      animation-fill-mode: forwards;
-      animation-direction: alternate-reverse;
-      text-transform: uppercase;
       font-size: 6rem;
-      color: #ffb6b6;
 } 
     
   .surname {
-      text-transform: uppercase;
       font-size: 6rem;
-      color: #ffb6b6;
       padding-left: 0.1rem;
       letter-spacing: 0.1rem;
       margin: 0 0 0 5px;
@@ -205,7 +197,7 @@
       justify-content: center;
       align-items: center;
       font-size: 2rem;
-      color: #F6ECEC;
+      color: #faf1f1;
     }
     
     .presentation button {
