--- a/src/routes/navigation/navigation.css
+++ b/src/routes/navigation/navigation.css
@@ -1,42 +1,29 @@
-
 .logo {
     display: flex;
-    font-size: 1.2rem;
-    font-weight: 400;
-    color: #fff;
-    letter-spacing: 0.1rem;
+    font-size: 1.1rem;
+    font-weight: 600;
+    color: #e7e7e7;
+    letter-spacing: 0.2rem;
 }
 
-a {
-    display: flex;
-  }
-  
-a:hover > .nameHidden {
-      width: calc(56px + 3.2px);
-  }
-  
-  a:hover > .surnameHidden {
-      width: calc(24px + 3.2px);
-  }
-
-  .navbar-brand:hover {
-    color: #fff;
-  }
-
-a span {
+.nameHidden {
     width:0px;
     overflow:hidden;
-    transition: all 0.3s ease-in;
-    transition: all 0.3s ease-out;
 }
 
-/* .logo:hover .nameHidden {
-    visibility: none;
-} */
+.surnameHidden {
+    width:0px;
+    overflow:hidden;
+}
 
 .navbar {
     background-color:#464245;
     height: 3.5rem;
+    padding: 0 0.5rem;
+    --bs-navbar-toggler-border-color: none;
+    --bs-navbar-toggler-font-size: 1rem;    
+    --bs-navbar-toggler-padding-y: 0.35rem;
+    --bs-navbar-toggler-padding-x: 0.7rem;
 }
 
 .navbar-toggler {
@@ -44,10 +31,15 @@ a span {
     border-color: #ffb6b6;
 }
 
+.navbar-brand:hover {
+    color: #777777;
+}
+
 .navItems a{
     text-decoration: none;
+    text-transform: uppercase;
     padding: 0.2rem 0;
-    color: #FFFDE4;
+    color: #e7e7e7;
     font-weight: 400;
     font-size: 14px;
     letter-spacing: 0.05rem;
@@ -57,6 +49,9 @@ a span {
     color: #777777;
 }
 
+ul {
+    margin-top: 15px;
+}
 
 @media only screen and (min-device-width: 768px) {
 
@@ -68,15 +63,33 @@ a span {
 .logo {
     font-size: 1.3rem;
 }
-    .navItems a{
-        margin-right: 3rem;
-        text-decoration: none;
-        padding: 0 0.5rem;
-        color: #fff;
-        font-weight: 400;
-        font-size: 16px;
-        letter-spacing: 0.05rem;
-    }
-    
+
+.navItems a{
+    margin-right: 2rem;
+    text-decoration: none;
+    color: #e7e7e7;
+    font-weight: 400;
+    font-size: 16px;
+}
+
+a {
+    display: flex;
+}
+
+a:hover > .nameHidden {
+    width: calc(56px + 3.2px);
+}
+
+a:hover > .surnameHidden {
+    width: calc(24px + 3.2px);
+}
+
+
+a span {
+    width:0px;
+    overflow:hidden;
+    transition: all 0.3s ease-in;
+    transition: all 0.3s ease-out;
+}
 
 }
