--- a/src/routes/home/home.css
+++ b/src/routes/home/home.css
@@ -121,6 +121,10 @@
     text-decoration: none;
   }
 
+  .profesion {
+    margin-bottom: 1.5rem;
+  }
+
   
   @media only screen and (min-device-width: 768px) {
   
