--- a/src/index.css
+++ b/src/index.css
@@ -6,12 +6,12 @@
  }
  
  body {
+  height: calc(100vh - 3.5rem);
+  width: 100vw;
   background-color: #353233;
   margin: 0;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  height: calc(100% - 3.5rem);
-  width: 100%;
 }
 
 code {
