--- a/src/routes/about/about.css
+++ b/src/routes/about/about.css
@@ -2,6 +2,19 @@
   --main-bg-color: #FEF9C7;
 }
 
+.containerAbout {
+    width: 100vw;
+    height: calc(100vh - 3.5rem);
+    display: flex;
+    justify-content: center;
+    align-items: center
+}
+
+.container {
+  display: flex;
+  flex-wrap: wrap;
+}
+
 .container img {
     width: 10rem;
     height: auto;
@@ -20,14 +33,11 @@ p {
 
 /*-------------- DESKTOP ----------------*/
 
-@media only screen and (min-device-width: 768px) {
-  
-  .aboutTitle {
-      margin-bottom: 2rem;
-  }
+@media (min-width: 768x){
+
   
   .container img {
-      width: 16rem;
+      width: 12rem;
       height: auto;
   }
 
