--- a/src/routes/contact/contact.css
+++ b/src/routes/contact/contact.css
@@ -1,39 +1,32 @@
-.containerContact {
-  margin: 3rem;
-  padding: 2rem;
-  height: 100%;
-}
-
-
-.contactTitle {
+.container {
+  width: 100vw;
+  height: calc(100vh - 3.5rem);
   display: flex;
   justify-content: center;
+  align-items: center
 }
 
-/* h1 span {
-  border: 0.2rem solid rgb(255, 238, 0);
-  border-radius: 1.5rem;
-  padding: 0.5rem 1rem;
-  box-shadow: 1px 1px 10px rgb(255, 238, 0);
-} */
+.containerContact {
+  display: block;
+  text-align: center;
+  margin: 5rem 0;
+}
 
 .socialMedia {
-  text-align: center;
+  display: flex;
+  flex-wrap: wrap;
 }
 
-.col a{
-  height: auto;
-  border: none;
+ .col a{
+  display: flex;
   justify-content: center;
-  text-align: center;
+  align-items: center;
 }
 
 .col a:hover{
   height: auto;
   background-color: transparent;
   border: none;
-  justify-content: center;
-  text-align: center;
 }
 
 .icon {
@@ -45,28 +38,25 @@
 .btn:hover {
   color:rgb(192, 192, 192);
   background-color: rgb(0, 0, 0);
-}
+} 
 
-@media only screen and (min-device-width: 768px) {
-.containerContact {
-  display:block;
-  width: 50%;
-  margin-left: auto;
-  margin-right: auto;
-  border-radius: 1.5rem;
-  padding: 6rem;
-}
+@media (min-width: 768px) {
 
 .socialMedia {
-  display: flex;
   flex-wrap: nowrap;
-  width: 33%;
-  margin-top: 4rem;
+}
+
+.col a {
+  display: flex;
 }
 
 .icon {
   font-size: 4rem;
   text-align: center;
+}
+
+.row-cols-1>* {
+  flex: auto;
 }
 }
 
