--- a/src/routes/home/home.css
+++ b/src/routes/home/home.css
@@ -1,8 +1,3 @@
-
-.presentation {
-    margin: 50% 0;
-}
-  
 .presentationContainer {
   display: block;
   text-align: center;
@@ -141,7 +136,7 @@
   }
 
   
-  @media only screen and (min-device-width: 768px) {
+@media (min-width: 768px) {
   
     .presentation {
       margin: 20% 0;
