--- a/src/routes/contact/contact.css
+++ b/src/routes/contact/contact.css
@@ -14,7 +14,9 @@
 
 .socialMedia {
   display: flex;
-  flex-wrap: wrap;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center
 }
 
  .col a{
@@ -43,7 +45,7 @@
 @media (min-width: 768px) {
 
 .socialMedia {
-  flex-wrap: nowrap;
+  flex-direction: row;
 }
 
 .col a {
