--- a/src/routes/navigation/navigation.css
+++ b/src/routes/navigation/navigation.css
@@ -1,36 +1,23 @@
-.logo {
-    display: flex;
-    font-size: 1.1rem;
-    font-weight: 600;
-    color: #e7e7e7;
-    letter-spacing: 0.2rem;
-}
-
-.nameHidden {
-    width:0px;
-    overflow:hidden;
-}
-
-.surnameHidden {
-    width:0px;
-    overflow:hidden;
-}
 
 .navbar {
-    background-color:#464245;
+    background-color:#272727;
     height: 3.5rem;
 }
 
-.navbar-toggler {
-    background-color:#ffb6b6;
-    border-color: #ffb6b6;
+/* .navbar-toggler {
+    background-color:rgb(142, 142, 142);
+    border-color: rgb(142, 142, 142);
 }
-
+.navbar-toggler:hover {
+    background-color: rgb(196, 196, 196);
+    border-color: rgb(196, 196, 196);
+    transform: scale(1.1);
+} */
 .navbar-brand:hover {
     color: #777777;
 }
 
-.navItems a{
+/* .navItems a{
     text-decoration: none;
     text-transform: uppercase;
     padding: 0.2rem 0;
@@ -38,16 +25,16 @@
     font-weight: 400;
     font-size: 14px;
     letter-spacing: 0.05rem;
-}
+} */
 
 .navItems a:hover {
     color: #777777;
 }
-
+/* 
 ul {
     margin-top: 15px;
 }
-
+ */
 @media only screen and (min-device-width: 768px) {
 
 #navbarSupportedContent{
