--- a/src/routes/projects/projects.css
+++ b/src/routes/projects/projects.css
@@ -1,6 +1,7 @@
-.container {
+.projects {
     width: 100vw;
     height: calc(100vh - 3.5rem);
+    padding: 2rem;
     display: flex;
     justify-content: center;
     align-items: center
@@ -21,19 +22,25 @@ a:hover {
 
 .btn-projects {
     margin: 1rem;
+    font-weight: bold;
     background-color: var(--bs-danger-bg-subtle);
     color: rgb(165, 165, 165);
     --bs-btn-border-color: #ff8585;
+    transition: 1s;
 }
 
 .btn-projects:hover {
-    background-color: #fcadad;
-    border-color: #fcadad;
-    color: #353535;
+    background-color: #d67e7e;
+    border-color: #d67e7e;
+    color: #eaeaea;
+    transform: scale(1.15);
 }
 
 @media (min-width: 768px) {
 .btn-projects {
         margin: 2rem;
+        font-size: 18px;
     }
+
+
 }
