--- a/src/index.css
+++ b/src/index.css
@@ -6,9 +6,9 @@
  }
  
  body {
-  height: calc(100vh - 3.5rem);
+  height: 100vh;
   width: 100vw;
-  background-color: #353233;
+  background-color: #131313;
   margin: 0;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -20,7 +20,7 @@ code {
 }
 
 h2 {
-  font-size: 1.5rem;
+  font-size: 2.3rem;
   color: #ff6565;
   font-weight: bolder;
   letter-spacing: 0.1rem;
@@ -28,12 +28,18 @@ h2 {
 }
 
 
-@media only screen and (min-device-width: 768px) {
+@media (min-width: 768px) {
 h2 {
-  font-size: 2.3rem;
+  font-size: 6rem;
   color: #ff6565;
   font-weight: bolder;
   letter-spacing: 0.4rem;;
   text-transform: uppercase;
 }
+}
+
+@media (min-width: 950px) {
+  h2 {
+    font-size: 7.5rem;
+  }
 }
