--- a/src/routes/contact/contact.css
+++ b/src/routes/contact/contact.css
@@ -1,6 +1,7 @@
 .container {
   width: 100vw;
   height: calc(100vh - 3.5rem);
+  padding: 2rem;
   display: flex;
   justify-content: center;
   align-items: center
@@ -17,29 +18,25 @@
   flex-wrap: wrap;
 }
 
- .col a{
+.icon {
+  font-size: 2.8rem;
+  text-align: center;
+  margin: 1rem 0;
+}
+
+.col a{
   display: flex;
   justify-content: center;
   align-items: center;
+  transition: 1.5s;
 }
 
 .col a:hover{
   height: auto;
   background-color: transparent;
   border: none;
+  transform: scale(1.2);
 }
-
-.icon {
-  font-size: 2.5rem;
-  text-align: center;
-  margin: 1rem 0;
-}
-
-.btn:hover {
-  color:rgb(192, 192, 192);
-  background-color: rgb(0, 0, 0);
-} 
-
 @media (min-width: 768px) {
 
 .socialMedia {
