--- a/src/routes/home/home.css
+++ b/src/routes/home/home.css
@@ -1,3 +1,8 @@
+.container {
+  height: calc(100vh - 3.5rem);
+  padding: 2rem;
+}
+
 .presentationContainer {
   display: block;
   text-align: center;
@@ -5,7 +10,7 @@
 
   .presentation h1{
     margin: 0 5px 0 0;
-    font-size: 2rem;
+    font-size: 3.1rem;
     font-weight: bolder;
     color: #ff6565;
   }
@@ -73,19 +78,21 @@
     animation-fill-mode: forwards;
     animation-direction: alternate-reverse;
     text-transform: uppercase;
-    font-size: 2rem;
+    font-size: 3.1rem;
     font-weight: bolder;
-    color: #ff5e5e;
+    color: #393636;
   } 
   
 .surname {
     text-transform: uppercase;
-    font-size: 2rem;
+    font-size: 3.1rem;
     font-weight: bolder;
-    color: #ffb6b6;
     padding-left: 0.1rem;
     letter-spacing: 0.1rem;
     margin: 0 0 0 5px;
+    background: -webkit-linear-gradient(right,#393636, #ff6565);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
   }
   
   .presentation p {
@@ -93,47 +100,35 @@
     justify-content: center;
     align-items: center;
     font-size: 1.5rem;
+    text-transform: uppercase;
     color: #F6ECEC;
-  }
-  
-  .presentation button {
-    display: block;
-    margin: auto;
-    border: none;
-    background-color: #ffb6b6;
-    font-size: 0.8rem;
-    border-radius: 2rem;
-    padding: 0.2rem 0.6rem;
-    animation: fade-in-move-down 2s;
-    animation-delay: 2s;
-  }
-  
-  .presentation button:hover {
-    border: var(--main-bg-color);
-    background-color: #f47f7f;
-    font-size: 0.9rem;
-    border-radius: 2rem;
-    padding: 0.2rem 1rem;
-    font-weight: thin;
-  }
-
-  
-  .presentation button a {
-    color: #1f1d1e;
-    text-decoration: none;
-    font-weight: 700;
-  }
-  
-
-  .presentation button a:hover {
-    color: #1f1d1e;
-    text-decoration: none;
-  }
-
-  .profesion {
     margin-bottom: 1.5rem;
     animation: fade-in-move-down 2s;
   }
+  
+.presentation button {
+    display: block;
+    margin: auto;
+    --bs-btn-border-radius: .9rem;
+    border: 1px solid;
+    transition: 1s;
+    text-transform: uppercase;
+    animation: fade-in-move-down 5s;
+    font-weight: 700;
+  }
+  
+  .presentation button:hover {
+    transform: scale(1.07);
+    --bs-btn-hover-bg: #ffffff;
+  }
+  
+  .presentation button:hover a {
+    color: black;
+  }
+
+.btn-lg {
+  font-size: 0.9rem;
+}
 
   
 @media (min-width: 768px) {
@@ -149,7 +144,7 @@
   
     .presentation h1{
       margin: 0 5px 0 0;
-      font-size: 6rem;
+      font-size: 7rem;
     }
     
     .completeName {
@@ -177,11 +172,11 @@
 }
   
 .fadeIn {
-      font-size: 6rem;
+      font-size: 7rem;
 } 
     
   .surname {
-      font-size: 6rem;
+      font-size: 7rem;
       padding-left: 0.1rem;
       letter-spacing: 0.1rem;
       margin: 0 0 0 5px;
@@ -191,25 +186,13 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      font-size: 2rem;
+      font-size: 2.5rem;
       color: #faf1f1;
     }
-    
-    .presentation button {
-      display: block;
-      margin: auto;
-      font-size: 1.1rem;
-      border-radius: 2rem;
-      padding: 0.3rem 1.2rem;
-    }
-    
-    .presentation button:hover {
-      border: var(--main-bg-color);
-      font-size: 1.1rem;
-      border-radius: 2rem;
-      padding: 0.3rem 1.2rem;
-      font-weight: thin;
-    }
+
+.btn-lg {
+  font-size: 1.3rem;
+}
 
   
   }
