--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Karla:wght@600;800&display=swap');
+ 
  * {
    box-sizing: border-box;
    margin: 0;
@@ -8,7 +10,7 @@
  body {
   height: 100vh;
   width: 100vw;
-  background-color: #131313;
+  background-color: #f1f1f1;
   margin: 0;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -20,10 +22,7 @@ code {
 }
 
 h2 {
-  font-size: 2.3rem;
-  color: #ff6565;
-  font-weight: bolder;
-  letter-spacing: 0.1rem;
+  color: #ed505f;
   text-transform: uppercase;
 }
 
@@ -31,10 +30,6 @@ h2 {
 @media (min-width: 768px) {
 h2 {
   font-size: 6rem;
-  color: #ff6565;
-  font-weight: bolder;
-  letter-spacing: 0.4rem;;
-  text-transform: uppercase;
 }
 }
 
