--- a/src/routes/home/home.css
+++ b/src/routes/home/home.css
@@ -1,9 +1,10 @@
-.container {
+.homeContainer {
   height: calc(100vh - 3.5rem);
+  width: 100vw;
   padding: 2rem;
 }
 
-.presentationContainer {
+.presentation {
   display: block;
   text-align: center;
 }
@@ -20,12 +21,6 @@
     justify-content: center;
     align-items: center;
   }
-  /* 
-  .completeName {
-    visibility: visible;
-    opacity: 1;
-    transition: opacity 2s linear;
-  } */
   
   @keyframes fadeInOutAnimation {
     0% {
@@ -80,59 +75,56 @@
     text-transform: uppercase;
     font-size: 3.1rem;
     font-weight: bolder;
-    color: #393636;
+    color: #ed505f;
   } 
   
 .surname {
     text-transform: uppercase;
     font-size: 3.1rem;
     font-weight: bolder;
-    padding-left: 0.1rem;
-    letter-spacing: 0.1rem;
+    letter-spacing: 0.05rem;
     margin: 0 0 0 5px;
-    background: -webkit-linear-gradient(right,#393636, #ff6565);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
+    color: #ed505f;
   }
   
   .presentation p {
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 1.5rem;
+    font-size: 1.8rem;
     text-transform: uppercase;
-    color: #F6ECEC;
-    margin-bottom: 1.5rem;
+    color: #383838;
+    margin-bottom: 0.7rem;
     animation: fade-in-move-down 2s;
   }
   
-.presentation button {
-    display: block;
-    margin: auto;
-    --bs-btn-border-radius: .9rem;
-    border: 1px solid;
+.getInTouch {
+    --bs-btn-border-radius: 1rem;
+    border: 0.2rem solid;
     transition: 1s;
     text-transform: uppercase;
     animation: fade-in-move-down 5s;
     font-weight: 700;
+    padding: 0.5rem;
   }
   
-  .presentation button:hover {
+.getInTouch:hover {
     transform: scale(1.07);
-    --bs-btn-hover-bg: #ffffff;
   }
   
-  .presentation button:hover a {
+  .getInTouch button:hover a {
     color: black;
   }
 
 .btn-lg {
-  font-size: 0.9rem;
+  font-size: 1rem;
 }
 
   
 @media (min-width: 768px) {
-  
+  .homeContainer {
+      height: calc(100vh - 3.5rem);
+    }
     .presentation {
       margin: 20% 0;
     }
@@ -183,13 +175,12 @@
     }
     
     .presentation p {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      font-size: 2.5rem;
-      color: #faf1f1;
+      font-size: 3rem;
+      margin-bottom: 14px;
     }
-
+.getInTouch {
+  width: 35%;
+}
 .btn-lg {
   font-size: 1.3rem;
 }
