--- a/src/routes/projects/projects.css
+++ b/src/routes/projects/projects.css
@@ -1,37 +1,28 @@
-.projects {
-    width: 100vw;
-    height: calc(100vh - 3.5rem);
-    padding: 2rem;
-    display: flex;
-    justify-content: center;
-    align-items: center
+.projects{
+    height: 100vh;
 }
 
-h2 {
-    margin: 3rem 0;
-}
-
-a {
+.linkProject {
     text-decoration: none;
     color: #fff;
 }
 
-a:hover {
-    color: rgb(192, 192, 192);
+.linkProject {
+    color: rgb(120, 120, 120);
 }
 
 .btn-projects {
     margin: 1rem;
     font-weight: bold;
     background-color: var(--bs-danger-bg-subtle);
-    color: rgb(165, 165, 165);
-    --bs-btn-border-color: #ff8585;
+    color: rgb(120, 120, 120);
+    --bs-btn-border-color: rgb(120, 120, 120);
     transition: 1s;
 }
 
 .btn-projects:hover {
-    background-color: #d67e7e;
-    border-color: #d67e7e;
+    background-color: rgb(82, 82, 82);
+    border-color: rgb(82, 82, 82);
     color: #eaeaea;
     transform: scale(1.15);
 }
