--- a/src/routes/contact/contact.css
+++ b/src/routes/contact/contact.css
@@ -6,8 +6,12 @@
   height: 100vh;
 }
 .socialMedia {
+  padding-top: 2rem;
+  width: 80%;
   display: flex;
   flex-direction: row;
+  justify-content: center;
+  align-items: center;
 }
 
 .icon {
@@ -23,7 +27,6 @@
 
 .col a{
   display: flex;
-  justify-content: center;
   align-items: center;
   transition: 1.5s;
 }
@@ -58,7 +61,7 @@
 }
 
 #exampleFormControlInput {
-  color: #eaeaea;
+  color: rgb(71, 71, 71);
   border: 4px solid #ed505f;
   transition: border 0.2s ease-in-out;
   font-weight: 500;
@@ -66,7 +69,7 @@
 }
 
 #exampleFormControlInput1 {
-  color: #eaeaea;
+  color: rgb(71, 71, 71);
   border: 4px solid #ed505f;
   transition: border 0.2s ease-in-out;
   font-weight: 500;
@@ -74,7 +77,7 @@
 }
 
 #exampleFormControlTextarea1 {
-  color: #eaeaea;
+  color: rgb(71, 71, 71);
   border: 4px solid #ed505f;
   transition: border 0.2s ease-in-out;
   font-weight: 500;
@@ -84,15 +87,18 @@
 .email {
   color:#383838;
   text-decoration : none;
-  font-size: 1.5rem
+  font-size: 1.3rem
 }
 
 @media (min-width: 768px) {
 
 .socialMedia {
+  padding-top: 0;
   width: 100%;
   display: flex;
   flex-direction: row;
+  align-items: start;
+  justify-content: start;
 }
 
 form {
@@ -115,8 +121,12 @@ form {
 }
 
 .iconEmail {
-  font-size: 3rem;
+  font-size: 2.4rem;
   color: rgb(71, 71, 71);
+}
+
+.email {
+  font-size: 1.6rem
 }
 
 .row-cols-1>* {
